@@ -505,3 +505,4 @@ songselect.button=SongSelect
 translation.export.heading=Translation export
 include.translations.question=Include the translations in the PDF file?
 slide.text=Slide
+autoplay.vid.label=Autoplay videos in live panel
